# masktools

./: .gitignore  LOG.md  README.md  main.py  pyproject.toml
playground/gemini_mask_test/: apply_mask.py
playground/mask_test/: apply_mask.py
src/: main.py  tmp.py
src/lib/: background_mask_rmbg2.py  bottom_half_mask.py  example_bottom_mask.py  example_left_mask.py  example_right_mask.py  gemini_mask.py  gptimage_mask.py  gptsky_mask.py  left_half_mask.py  mask.py  person_mask.py  right_half_mask.py  sky_mask_segformer_b5.py  trunk_mask_yolov11.py  white_mask.py
src/lib/llmclient/: chatgpt.py  gptimage.py
