[project]
name = "masktools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.2",
    "google-genai>=1.0.0",
    "kornia>=0.8.2",
    "pillow>=12.2.0",
    "python-dotenv>=1.0.0",
    "timm>=1.0.26",
    "torch",
    "torchvision",
    "transformers>=5.5.4",
    "ultralytics>=8.4.40",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
